<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="150dp"
        android:text="@string/saccombank"
        android:textColor="@color/dark_text"
        android:textSize="7pt"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/ivArrow"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvReciever"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="150dp"
        android:text="@string/aribank"
        android:textColor="@color/dark_text"
        android:textSize="7pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ivArrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivArrow"
        app:layout_constraintTop_toTopOf="@+id/ivArrow" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:src="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/tvSender"
        app:layout_constraintEnd_toStartOf="@+id/tvReciever"
        app:layout_constraintStart_toEndOf="@+id/tvSender"
        app:layout_constraintTop_toTopOf="@+id/tvSender" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/date"
        android:textColor="@color/dark_text"
        android:textSize="6pt"
        app:layout_constraintEnd_toStartOf="@id/tvStatus"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSender" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_transaction_status"
        android:paddingHorizontal="10dp"
        android:paddingVertical="2dp"
        android:text="@string/hoan_tat"
        android:textColor="#099630"
        app:layout_constraintBottom_toBottomOf="@+id/tvDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toTopOf="@+id/tvDate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/so_du"
        android:textColor="#099630"
        android:textSize="7pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvSender" />


</androidx.constraintlayout.widget.ConstraintLayout>