<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCard"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:background="@drawable/bg_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textColor="@color/orange"
            android:textSize="12pt"
            android:textStyle="italic|bold"
            app:layout_constraintRight_toLeftOf="@id/glCardLine"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNameBank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank"
            android:textColor="@color/light_text"
            android:textSize="10pt"
            android:textStyle="italic|bold"
            app:layout_constraintLeft_toRightOf="@id/glCardLine"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSerialNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serial_number"
            android:textColor="@color/light_text"
            android:textSize="8pt"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvMoreInfo"
            app:layout_constraintLeft_toLeftOf="@id/glCardLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="-90"
            android:text="@string/atm"
            android:textColor="@color/orange"
            android:textSize="6pt"
            app:layout_constraintBottom_toTopOf="@+id/tvSerialNumber"
            app:layout_constraintLeft_toLeftOf="@+id/glCardLine"
            app:layout_constraintTop_toBottomOf="@+id/tvNameBank" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_double_left"
            app:layout_constraintBottom_toTopOf="@+id/tvSerialNumber"
            app:layout_constraintRight_toLeftOf="@+id/glCardLine"
            app:layout_constraintTop_toBottomOf="@+id/tvNameBank" />

        <TextView
            android:id="@+id/tvMoreInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_info"
            android:textColor="@color/orange"
            android:textSize="5pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/glCardLine" />


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_undraw_digital_currency_qpak__2_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glCardLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.cardview.widget.CardView
            android:id="@+id/ivAvatar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:cardBackgroundColor="@color/orange"
            app:cardCornerRadius="15dp"
            app:contentPadding="2dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/orange"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img_avatar" />
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tvNameAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/account_name"
            android:textColor="@color/light_text"
            app:layout_constraintBottom_toBottomOf="@id/ivAvatar"
            app:layout_constraintRight_toLeftOf="@id/ivAvatar"
            app:layout_constraintTop_toTopOf="@id/ivAvatar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLeftContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glRightContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <TextView
        android:id="@+id/tvViCuaToi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/vi_cua_toi"
        android:textColor="@color/dark_text"
        android:textSize="8pt"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@id/tvSoDu"
        app:layout_constraintStart_toStartOf="@+id/glLeftContent"
        app:layout_constraintTop_toBottomOf="@id/clCard" />

    <TextView
        android:id="@+id/tvSoDu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/so_du"
        android:textSize="9pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvViCuaToi"
        app:layout_constraintEnd_toStartOf="@+id/glRightContent"
        app:layout_constraintLeft_toRightOf="@id/tvViCuaToi"
        app:layout_constraintTop_toTopOf="@id/tvViCuaToi" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDichVu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dich_vu"
        android:textColor="@color/dark_text"
        android:textSize="8pt"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/glLeftContent"
        app:layout_constraintTop_toBottomOf="@id/tvViCuaToi"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDichVu"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDichVu"
        tools:layout_editor_absoluteX="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/btChuyenTien"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/bg_card"
            app:cardBackgroundColor="#FFF2F0"
            app:cardCornerRadius="10dp"
            app:contentPadding="20dp"
            app:layout_constraintEnd_toStartOf="@+id/btNapTien"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_chuyen_tien" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btNapTien"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/bg_card"
            app:cardBackgroundColor="#E5EFFF"
            app:cardCornerRadius="10dp"
            app:contentPadding="20dp"
            app:layout_constraintEnd_toStartOf="@id/btMore"
            app:layout_constraintStart_toEndOf="@id/btChuyenTien"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_naptien" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btMore"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/bg_card"
            app:cardBackgroundColor="#FFE2F9"
            app:cardCornerRadius="10dp"
            app:contentPadding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btNapTien"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_more" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="80dp"

            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/chuyen_tien"
            android:textAlignment="center"
            android:textColor="@color/dark_text"
            android:textSize="6.5pt"
            app:layout_constraintLeft_toLeftOf="@id/btChuyenTien"
            app:layout_constraintRight_toRightOf="@id/btChuyenTien"
            app:layout_constraintTop_toBottomOf="@id/btChuyenTien" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:text="@string/nap_tien"
            android:textAlignment="center"
            android:textColor="@color/dark_text"
            android:textSize="6.5pt"
            app:layout_constraintLeft_toLeftOf="@id/btNapTien"
            app:layout_constraintRight_toRightOf="@id/btNapTien"
            app:layout_constraintTop_toBottomOf="@id/btNapTien" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/more"
            android:textAlignment="center"
            android:textColor="@color/dark_text"
            android:textSize="6.5pt"
            app:layout_constraintLeft_toLeftOf="@id/btMore"
            app:layout_constraintRight_toRightOf="@id/btMore"
            app:layout_constraintTop_toBottomOf="@id/btMore" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLichSu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lich_su"
        android:textColor="@color/dark_text"
        android:textSize="8pt"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/glLeftContent"
        app:layout_constraintTop_toBottomOf="@+id/clDichVu"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistory"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLichSu"
        tools:layout_editor_absoluteX="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>