<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTransactionActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:paddingHorizontal="10dp"
        android:src="@drawable/vector_login"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#B3F2F2F2"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toTopOf="@+id/clContent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#B3F2F2F2"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbToolbar"
        tools:layout_editor_absoluteX="32dp">


        <TextView
            android:id="@+id/tvSoTienNap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/so_tien_nap"
            android:textColor="@color/dark_text"
            android:textSize="8pt"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNhapSoTien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nhap_so_tien"
            android:textColor="@color/dark_text"
            android:textSize="8pt"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clSoTienNap" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etValue"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:hint="@string/nhap_so_tien"
            android:inputType="number"
            android:paddingHorizontal="10dp"
            android:textSize="16pt"
            app:layout_constraintTop_toBottomOf="@+id/tvNhapSoTien" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSubmit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bg_button"
            android:text="@string/nap_tien"
            android:textColor="@color/light_text"
            android:textSize="10pt"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />
        <!--        <RadioGroup-->
        <!--            android:id="@+id/rgSoTienNap"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="300dp"-->
        <!--            android:orientation="horizontal"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/tvSoTienNap"-->
        <!--            tools:ignore="MissingConstraints">-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSoTienNap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSoTienNap">

            <RadioButton
                android:id="@+id/rbtValue1"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_radio_button"
                android:button="@null"
                android:text="@string/value1"
                android:textAlignment="center"
                android:textColor="@drawable/text_color_radio_button"
                android:textSize="8pt"
                app:layout_constraintEnd_toStartOf="@id/rbtValue2"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioButton
                android:id="@+id/rbtValue2"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_radio_button"
                android:button="@null"
                android:text="@string/value2"
                android:textAlignment="center"
                android:textColor="@drawable/text_color_radio_button"
                android:textSize="8pt"
                app:layout_constraintBottom_toBottomOf="@+id/rbtValue1"
                app:layout_constraintEnd_toStartOf="@id/rbtValue3"
                app:layout_constraintStart_toEndOf="@id/rbtValue1"
                app:layout_constraintTop_toTopOf="@+id/rbtValue1" />

            <RadioButton
                android:id="@+id/rbtValue3"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_radio_button"
                android:button="@null"
                android:text="@string/value3"
                android:textAlignment="center"
                android:textColor="@drawable/text_color_radio_button"
                android:textSize="8pt"
                app:layout_constraintBottom_toBottomOf="@+id/rbtValue1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/rbtValue2"
                app:layout_constraintTop_toTopOf="@+id/rbtValue1" />

            <RadioButton
                android:id="@+id/rbtValue5"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_radio_button"
                android:button="@null"
                android:text="@string/value5"
                android:textAlignment="center"
                android:textColor="@drawable/text_color_radio_button"
                android:textSize="8pt"
                app:layout_constraintEnd_toEndOf="@+id/rbtValue1"
                app:layout_constraintLeft_toLeftOf="@id/rbtValue1"
                app:layout_constraintRight_toRightOf="@id/rbtValue1"
                app:layout_constraintStart_toStartOf="@+id/rbtValue1"
                app:layout_constraintTop_toBottomOf="@id/rbtValue1" />

            <RadioButton
                android:id="@+id/rbtValue10"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_radio_button"
                android:button="@null"
                android:text="@string/value10"
                android:textAlignment="center"
                android:textColor="@drawable/text_color_radio_button"
                android:textSize="8pt"
                app:layout_constraintBottom_toBottomOf="@+id/rbtValue5"
                app:layout_constraintEnd_toEndOf="@+id/rbtValue2"
                app:layout_constraintStart_toStartOf="@+id/rbtValue2"
                app:layout_constraintTop_toTopOf="@+id/rbtValue5" />

            <RadioButton
                android:id="@+id/rbtValue20"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_radio_button"
                android:button="@null"
                android:text="@string/value20"
                android:textAlignment="center"
                android:textColor="@drawable/text_color_radio_button"
                android:textSize="8pt"
                app:layout_constraintBottom_toBottomOf="@+id/rbtValue5"
                app:layout_constraintEnd_toEndOf="@+id/rbtValue3"
                app:layout_constraintStart_toStartOf="@+id/rbtValue3"
                app:layout_constraintTop_toTopOf="@+id/rbtValue5" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--        </RadioGroup>-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>